<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FAFAFA">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#333333"
        android:layout_gravity="center"
        android:paddingBottom="24dp" />

    <TextView
        android:id="@+id/symbolText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch_symbole"
        android:textStyle="bold"

        android:textSize="18sp"
        android:textColor="#555555"
        android:paddingBottom="8dp" />

    <RadioGroup
        android:id="@+id/symbolGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:paddingBottom="24dp">

        <RadioButton
            android:id="@+id/radioX"
            android:text="@string/X"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginEnd="24dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            />

        <RadioButton
            android:id="@+id/radioO"
            android:text="@string/O"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:backgroundTint="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <TextView
        android:id="@+id/nbrPartieText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nbr_partie"
        android:textSize="18sp"
        android:textColor="#555555"
        android:textStyle="bold"
        android:paddingBottom="8dp" />

    <Spinner
        android:id="@+id/mySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:padding="5dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/spinner_border"
        android:popupBackground="#fafafa"
        android:textColor="@android:color/black"

        />



    <Button
        android:id="@+id/scoreButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="#000000"
        android:backgroundTint="#E0E0E0"
        android:layout_marginBottom="12dp"
        android:padding="12dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/win"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aucun_tournoi_sauvegard"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
    />

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/playButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/jouer"
            android:textColor="#FFFFFF"
            android:backgroundTint="#4892C9"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/howButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/howButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/how"
            android:textColor="#000000"
            android:backgroundTint="#FFFFFF"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
